--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -40,6 +40,9 @@ template {
   display: none;
 }
 a {
+  font-family: 'Source Sans Pro', sans-serif;
+  text-decoration: none;
+  color: white;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
@@ -105,6 +108,7 @@ hr {
   height: 0;
   overflow: visible;
 }
+
 button,
 input,
 optgroup,
@@ -201,7 +205,6 @@ html {
 body {
   color: hsla(0, 0%, 0%, 0.8);
   font-family: georgia, serif;
-  font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
@@ -220,7 +223,13 @@ img {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+
+h1, h2, h3, p { 
+  color: white;
+}
+
 h1 {
+  width: 400px;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -229,14 +238,13 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-family: 'Playfair Display';
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  font-size: 3rem;
+  font-weight: 300;
   line-height: 1.1;
 }
+
 h2 {
   margin-left: 0;
   margin-right: 0;
@@ -246,12 +254,10 @@ h2 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-family: 'Playfair Display';
   text-rendering: optimizeLegibility;
-  font-size: 1.62671rem;
+  font-size: 2rem;
+  font-weight: 300;
   line-height: 1.1;
 }
 h3 {
@@ -263,12 +269,10 @@ h3 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-family: 'Playfair Display';
   text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
+  font-size: 1rem;
+  font-weight: 300;
   line-height: 1.1;
 }
 h4 {
@@ -283,7 +287,7 @@ h4 {
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+
   text-rendering: optimizeLegibility;
   font-size: 1rem;
   line-height: 1.1;
@@ -299,8 +303,7 @@ h5 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;s
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
   line-height: 1.1;
@@ -377,6 +380,8 @@ dd {
   margin-bottom: 1.45rem;
 }
 p {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1em;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
