--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -225,11 +226,11 @@ img {
 }
 
 h1, h2, h3, p { 
+  cursor: default;
   color: white;
 }
 
 h1 {
-  width: 400px;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -303,7 +304,7 @@ h5 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;s
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
   line-height: 1.1;
@@ -336,7 +337,8 @@ hgroup {
   margin-bottom: 1.45rem;
 }
 ul {
-  margin-left: 1.45rem;
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-left: 1rem;
   margin-right: 0;
   margin-top: 0;
   padding-bottom: 0;
@@ -346,6 +348,7 @@ ul {
   margin-bottom: 1.45rem;
   list-style-position: outside;
   list-style-image: none;
+  list-style-type: none;
 }
 ol {
   margin-left: 1.45rem;
@@ -514,6 +517,8 @@ th {
   font-weight: bold;
 }
 li {
+
+  color: white;
   margin-bottom: calc(1.45rem / 2);
 }
 ol li {
