--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,7 +112,8 @@
     border: 1px solid white;
     padding-left: 24px;
     padding-right: 24px;
-    margin-left: 3em;
+    margin-left: 1em;
+    margin-right: 1em;
     width: auto;
 }
 
