--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -9,13 +9,37 @@
     .mm-text-box { 
         width: 60vw;
     }
+    
+}
 
+@media screen and (max-width: 1024px) and (min-width: 480px) { 
+    .tags {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 320px) { 
+    .sm-text-box, .name-header { 
+        width: 300px;
+        text-align: center;
+        padding-top: 300px;
+    }
+    .landing-container { 
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width: 768px) { 
+    .circle { 
+        width: 50vw;
+        height: 50vw;
+    }
+
     .categories  {
         display:none;
     }
+
     .about-container { 
         flex-direction: column;
         align-items: center;
@@ -26,16 +50,21 @@
         padding-top: 10px
     }
 
-    .sm-text-box, .name-header { 
-        width: 100%;
-        text-align: center;
+    .project-content { 
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
     }
+
     .button-container { 
         display:flex; 
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
-        height: 120px;
+        /* height: 120px; */
     }
 
+}
+
+@media screen and (max-width: 480px) { 
 }
