--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -9,7 +9,11 @@
     .mm-text-box { 
         width: 60vw;
     }
-    
+    .redirect-button { 
+        font-size: .8em;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 @media screen and (max-width: 1024px) and (min-width: 480px) { 
@@ -17,13 +21,16 @@
         display: flex;
         justify-content: center;
     }
+    .about-text-box { 
+        padding-left: 20px;
+    }
 }
 
 @media screen and (max-width: 768px) and (min-width: 320px) { 
     .sm-text-box, .name-header { 
         width: 300px;
         text-align: center;
-        padding-top: 300px;
+        padding-top: 420px;
     }
     .landing-container { 
         justify-content: center;
@@ -31,6 +38,10 @@
 }
 
 @media screen and (max-width: 768px) { 
+    .landing-container { 
+        padding-top: 0px;
+    }
+
     .circle { 
         width: 50vw;
         height: 50vw;
@@ -66,5 +77,8 @@
 
 }
 
-@media screen and (max-width: 480px) { 
+@media screen and (max-width: 480px) {
+    .scroll-button { 
+        display:none;
+    }
 }
